<resources>
	<string name="app_name">Calculator</string>
	<string name="zero">0</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="dot">.</string>
	<string name="enter">ENTER</string>
	<string name="add">+</string>
	<string name="subtract">-</string>
	<string name="multiply">*</string>
	<string name="divide">/</string>
	<string name="placeholder">0</string>
	<string name="clear">Clear</string>
	<string name="calculator_button_text">Calculator</string>
	<string name="compass_button_text">Compass</string>
	<string name="map_button_text">Map</string>
	<string name="gps_status_button_text">GPS Status</string>
	<string name="speed_format">%s m/s</string>
	<string name="accuracy_format">%s m</string>
	<string name="altitude_format">%s m</string>
	<string name="loading">Loading...</string>
	<string name="provider_label">Provider</string>
	<string name="speed_label">Speed</string>
	<string name="accuracy_label">Accuracy</string>
	<string name="altitude_label">Altitude</string>
	<string name="latitude_label">Latitude</string>
	<string name="longitude_label">Longitude</string>
</resources>
