<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.example.romrell4.calculator.MainActivity">

	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_margin="8dp"
		android:layout_weight="1"
		android:gravity="end|center_vertical"
		android:hint="@string/placeholder"
		android:textColor="@android:color/black"
		android:textSize="50sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		>

		<Button
			android:id="@+id/seven"
			style="@style/CalculatorButton"
			android:text="@string/seven" />

		<Button
			android:id="@+id/eight"
			style="@style/CalculatorButton"
			android:text="@string/eight" />

		<Button
			android:id="@+id/nine"
			style="@style/CalculatorButton"
			android:text="@string/nine" />

		<Button
			android:id="@+id/add"
			style="@style/CalculatorButton"
			android:backgroundTint="@color/colorAccent"
			android:text="@string/add" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		>

		<Button
			android:id="@+id/four"
			style="@style/CalculatorButton"
			android:text="@string/four" />

		<Button
			android:id="@+id/five"
			style="@style/CalculatorButton"
			android:text="@string/five" />

		<Button
			android:id="@+id/six"
			style="@style/CalculatorButton"
			android:text="@string/six" />

		<Button
			android:id="@+id/subtract"
			style="@style/CalculatorButton"
			android:backgroundTint="@color/colorAccent"
			android:text="@string/subtract" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		>

		<Button
			android:id="@+id/one"
			style="@style/CalculatorButton"
			android:text="@string/one" />

		<Button
			android:id="@+id/two"
			style="@style/CalculatorButton"
			android:text="@string/two" />

		<Button
			android:id="@+id/three"
			style="@style/CalculatorButton"
			android:text="@string/three" />

		<Button
			android:id="@+id/multiply"
			style="@style/CalculatorButton"
			android:backgroundTint="@color/colorAccent"
			android:text="@string/multiply" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		>

		<Button
			android:id="@+id/dot"
			style="@style/CalculatorButton"
			android:text="@string/dot" />

		<Button
			android:id="@+id/zero"
			style="@style/CalculatorButton"
			android:text="@string/zero" />

		<Button
			android:id="@+id/enter"
			style="@style/CalculatorButton"
			android:backgroundTint="@android:color/holo_green_light"
			android:text="@string/enter"
			android:textSize="16sp" />

		<Button
			android:id="@+id/divide"
			style="@style/CalculatorButton"
			android:backgroundTint="@color/colorAccent"
			android:text="@string/divide" />
	</LinearLayout>
</LinearLayout>

