<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.example.romrell4.calculator.CalculatorActivity">

	<Button
		android:id="@+id/calculator_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/calculator_button_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/compass_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/compass_button_text"
		app:layout_constraintEnd_toEndOf="@+id/calculator_button"
		app:layout_constraintStart_toStartOf="@+id/calculator_button"
		app:layout_constraintTop_toBottomOf="@+id/calculator_button" />

	<Button
		android:id="@+id/map_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/map_button_text"
		app:layout_constraintEnd_toEndOf="@+id/calculator_button"
		app:layout_constraintStart_toStartOf="@+id/calculator_button"
		app:layout_constraintTop_toBottomOf="@+id/compass_button" />

	<Button
		android:id="@+id/gps_status_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/gps_status_button_text"
		app:layout_constraintEnd_toEndOf="@+id/calculator_button"
		app:layout_constraintStart_toStartOf="@+id/calculator_button"
		app:layout_constraintTop_toBottomOf="@+id/map_button" />

</android.support.constraint.ConstraintLayout>
