<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.example.romrell4.calculator.CompassActivity">

	<ImageView
		android:id="@+id/compass_image"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_margin="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/compass"
		tools:ignore="ContentDescription" />

	<ScrollView
		android:id="@+id/scroll_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/compass_image">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:padding="8dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/latitude_label"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/latitude"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/loading"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</android.support.constraint.ConstraintLayout>

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:padding="8dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/longitude_label"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/longitude"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/loading"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</android.support.constraint.ConstraintLayout>

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:padding="8dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/altitude_label"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/altitude"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/loading"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</android.support.constraint.ConstraintLayout>

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:padding="8dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/accuracy_label"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/accuracy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/loading"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</android.support.constraint.ConstraintLayout>

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:padding="8dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/speed_label"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/speed"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/loading"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</android.support.constraint.ConstraintLayout>

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:padding="8dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/provider_label"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/provider"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/loading"
					android:textAppearance="@android:style/TextAppearance.Material.Medium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</android.support.constraint.ConstraintLayout>
		</LinearLayout>
	</ScrollView>

</android.support.constraint.ConstraintLayout>
